--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "emailer",
+  "name": "reactjs-emailer-server",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "node src/server.js"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
